--- a/MarketPricingSystem/MarketPricingSystem/Views/Products/Updateproduct.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Products/Updateproduct.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Updatesupermarket";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 }
-<main>
+<main class="English">
     
     <div class="container">
         <div class="row justify-content-center">
@@ -79,6 +79,90 @@
 
                     </div>
                    
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+
+
+<main class="Arabic">
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-7">
+                <div class="card shadow-lg border-0 rounded-lg mt-5">
+                    <div class="card-header"><h3 class="text-center font-weight-light my-4">تعديل المنتج</h3></div>
+                    <div class="card-body">
+
+
+                        <form method="post" action="/Products/Confirmupdate">
+                            <h6 style="color:red;opacity:0.5">@TempData["Message1"]  </h6>  <h6 style="color:red;opacity:0.5;margin-left:53%">@TempData["Message2"]  </h6>
+                            <div class="row mb-3">
+                                <div class="col-md-6">
+                                    <div class="form-floating mb-3 mb-md-0">
+                                        <input class="form-control" id="productname" type="text" name="productname" value="@Model.Product.ProductName" required />
+                                        <label for="productname">الاسم </label>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input class="form-control" id="Barcode" type="text" name="Barcode" value="@Model.Product.BarcodeNb" required />
+                                        <label for="Barcode">الرمز</label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="ProductDescription" type="text" name="ProductDescription" value="@Model.Product.ProductDescription" required />
+                                <label for="ProductDescription">الوصف</label>
+                            </div>
+
+
+
+                            <div class="row mb-3">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="categories">الصنف</label>
+
+                                        <select id="categories" class="form-control" name="Categoryid">
+
+                                            @foreach (var category in Model.Categories)
+                                            {
+                                                if (Model.Product.CategoryId == category.CategoryId)
+                                                {
+                                                    <option value="@category.CategoryId" selected>@category.CategoryName</option>
+                                                }
+                                                else
+                                                {
+                                                    <option value="@category.CategoryId">@category.CategoryName</option>
+                                                }
+
+                                            }
+
+
+
+                                        </select>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <input type="hidden" value="@Model.Product.ProductId" name="Productid" />
+
+                            <div class="mt-4 mb-0">
+                                <div class="d-grid"> <button type="submit" class="btn btn-primary">تعديل</button> </div>
+                            </div>
+                        </form>
+
+
+
+                    </div>
+
                 </div>
             </div>
         </div>
