--- a/MarketPricingSystem/MarketPricingSystem/Views/Roles/Createrole.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Roles/Createrole.cshtml
@@ -7,7 +7,7 @@
 }
 
 
-<main>
+<main class="English">
 
     <div class="container">
         <div class="row justify-content-center">
@@ -56,7 +56,7 @@
                         </div>
 
                         <div class="mt-4 mb-0">
-                            <div class="d-grid"> <button type="submit" class="btn btn-primary"> Add</button> </div>
+                            <div class="d-grid"> <button type="submit" id="btne" class="btn btn-primary"> Add</button> </div>
                         </div>
 
 
@@ -70,6 +70,69 @@
     </div>
 </main>
 
+
+<main class="Arabic">
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-7">
+                <div class="card shadow-lg border-0 rounded-lg mt-5">
+                    <div class="card-header"><h3 class="text-center font-weight-light my-4">اضافه دور جديد</h3></div>
+                    <div class="card-body">
+
+                        <h6 style="color:red;opacity:0.5;display:none" id="pleaseinserta">ادخل اسم الدور رجاءا</h6>
+                        <div class="row mb-3">
+                            <div class="col-md-6">
+                                <div class="form-floating mb-3 mb-md-0">
+                                    <input class="form-control" id="Rolenamea" onclick="hidea()" type="text" name="Rolename" required />
+                                    <label for="Rolename"> اسم الدور</label>
+                                </div>
+                            </div>
+
+                        </div>
+
+
+
+
+
+                        <div class="row mb-3">
+
+
+                            @foreach (var permission in Model)
+                            {
+
+                                <div class="col-md-6">
+
+                                    <input style=" cursor: pointer;" class="form-check-input checkk" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" value="@permission.PermissionId">
+                                    <label style=" cursor: pointer;" for="@permission.PermissionName"> @permission.PermissionName</label><br>
+
+                                </div>
+
+
+                            }
+
+
+
+
+
+
+
+                        </div>
+
+                        <div class="mt-4 mb-0">
+                            <div class="d-grid"> <button type="submit" id="btna" class="btn btn-primary"> اضافه</button> </div>
+                        </div>
+
+
+
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 
 @section scripts{
 
@@ -91,7 +154,7 @@
 
 
 
-        $('button').click(function () {
+        $('#btne').click(function () {
 
 
 
@@ -154,13 +217,13 @@
 
                             }
                         },
-                          error: function () {
-                              Swal.fire({
-                                  icon: 'error',
-                                  title: 'Oops...',
-                             
+                        error: function () {
+                            Swal.fire({
+                                icon: 'error',
+                                title: 'Oops...',
 
-                              })
+
+                            })
                         }
 
                     })
@@ -170,6 +233,97 @@
 
         })
 
+/////arabic
+        function hidea() {
+
+            var pleaseinsert = document.getElementById('pleaseinserta');
+            pleaseinsert.style.display = "none";
+
+        }
+
+
+
+
+
+
+        $('#btna').click(function () {
+
+
+
+            var rolename = document.getElementById('Rolenamea').value;
+
+            if (rolename == "") {
+
+                var pleaseinsert = document.getElementById('pleaseinserta');
+                pleaseinsert.style.display = "block";
+
+            }
+            else {
+
+                var data = rolename + ",";
+
+                var allcheckbox = document.getElementsByClassName("checkk");
+
+
+                for (var checkedone of allcheckbox) {
+
+                    if (checkedone.checked) {
+
+                        data += checkedone.value + ",";
+                    }
+
+
+                }
+                data = data.substring(0, data.length - 1);
+
+
+
+                $.ajax
+                    ({
+                        type: 'POST',
+                        dataType: 'JSON',
+                        url: '/Roles/ConfirmCreate',
+                        data: { Data: data },
+                        //here if request is successfully send then its success but we want to see the response after a successful request
+                        success: function (response) {
+                            if (response.success) {
+
+                                Swal.fire({
+                                    position: 'top-end',
+                                    icon: 'success',
+                                    title: response.responseText,
+                                    showConfirmButton: false,
+                                    timer: 1500
+                                })
+
+
+                            }
+                            else {
+                                Swal.fire({
+                                    icon: 'error',
+                                    title: 'Oops...',
+                                    text: response.responseText,
+
+                                })
+
+
+                            }
+                        },
+                        error: function () {
+                            Swal.fire({
+                                icon: 'error',
+                                title: 'Oops...',
+
+
+                            })
+                        }
+
+                    })
+            }
+
+
+
+        })
 
 
 
