--- a/MarketPricingSystem/MarketPricingSystem/Views/Roles/Rolepermissions.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Roles/Rolepermissions.cshtml
@@ -5,14 +5,14 @@
 }
 
 
-<main>
+<main class="English">
     <div class="container-fluid px-4">
         <h1 class="mt-4">All Permissions</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="/Users/Dashboard">Dashboard</a></li>
             <li class="breadcrumb-item active">Tables</li>
         </ol>
-       
+
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-table me-1"></i>
@@ -22,9 +22,9 @@
                 <table id="datatablesSimple">
                     <thead>
                         <tr>
-                            <th  >Permission Name</th>
+                            <th>Permission Name</th>
 
-                          
+
 
 
                         </tr>
@@ -45,7 +45,63 @@
                                 <td style="color:forestgreen">@permission.PermissionName</td>
 
 
-                               
+
+
+                            </tr>
+                        }
+
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</main>
+
+
+
+
+<main class="Arabic">
+    <div class="container-fluid px-4">
+        <h1 class="mt-4">جميع الاذونات</h1>
+        <ol class="breadcrumb mb-4">
+            <li class="breadcrumb-item"><a href="/Users/Dashboard">الصفحه الرئيسيه</a></li>
+            <li class="breadcrumb-item active">الاذونات</li>
+        </ol>
+
+        <div class="card mb-4">
+            <div class="card-header">
+                <i class="fas fa-table me-1"></i>
+                الاذونات
+            </div>
+            <div class="card-body">
+                <table id="datatablesSimplea">
+                    <thead>
+                        <tr>
+                            <th>الاسم</th>
+
+
+
+
+                        </tr>
+                    </thead>
+                    <tfoot>
+                        <tr>
+                            <th>الاسم</th>
+
+
+
+                        </tr>
+                    </tfoot>
+                    <tbody>
+                        @foreach (var permission in Model)
+                        {
+
+                            <tr>
+                                <td style="color:forestgreen">@permission.PermissionName</td>
+
+
+
 
                             </tr>
                         }
