--- a/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
@@ -24,13 +24,24 @@
     
     @RenderSection("Styles", false)
 
+    <style>
+        .Arabic {
+            display: none;
+        }
+
+        .English {
+            display: none;
+        }
+    </style>
+
 
 </head>
 <body class="sb-nav-fixed">
     
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
-        <a class="navbar-brand ps-3" href="/Users/Dashboard">Welcome Back</a>
+        <a class="English navbar-brand ps-3" href="/Users/Dashboard">Welcome Back</a>
+        <a class="Arabic navbar-brand ps-3" href="/Users/Dashboard"> مرحبا بعودتك </a>
         <!-- Sidebar Toggle-->
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
         <!-- Navbar Search-->
@@ -41,10 +52,17 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="/Users/Settings">My Profile</a></li>
+                    <li>
+                    <a class="English dropdown-item" href="/Users/Settings">Profile settings</a>
+                    <a class="Arabic dropdown-item" href="/Users/Settings">اعدادات الحساب</a>
+                    
+                    </li>
 
                     <li><hr class="dropdown-divider" /></li>
-                    <li><a class="dropdown-item" href="/Account/Signout">Logout</a></li>
+                    <li>
+                    <a class="English dropdown-item" href="/Account/Signout">Logout</a>
+                    <a class="Arabic dropdown-item" href="/Account/Signout">تسجيل خروج</a>
+                    </li>
                 </ul>
             </li>
         </ul>
@@ -52,88 +70,91 @@
 
 
     <div id="layoutSidenav">
-        <div id="layoutSidenav_nav">
-            <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-                <div class="sb-sidenav-menu">
+        <div class="English">
+
+
+            <div id="layoutSidenav_nav">
+                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                    <div class="sb-sidenav-menu">
 
 
 
 
-                    <div class="nav">
+                        <div class="nav">
 
 
 
-                        <div class="sb-sidenav-menu-heading">basic</div>
+                            <div class="sb-sidenav-menu-heading">basic</div>
 
-                        <a class="nav-link" href="/Users/Dashboard">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Dashboard
-                        </a>
-
-
-
-                        <div class="sb-sidenav-menu-heading">Settings</div>
-
-
-                        @if (value.Contains("viewsupermarket"))
-                        {
-                            <a class="nav-link" href="/Supermarket/Allsupermarkets">
-                                <div class="sb-nav-link-icon"> <i class="fa-solid fa-cart-shopping"></i></div>
-                                Super Markets
-                            </a>
-                        }
-
-
-
-                        @if (value.Contains("viewproduct"))
-                        {
-
-                            <a class="nav-link" href="/Products/AllProducts">
-                                <div class="sb-nav-link-icon"><i class="fa-brands fa-product-hunt"></i></div>
-                                Products
+                            <a class=" nav-link" href="/Users/Dashboard">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Dashboard
                             </a>
 
-                        }
+
+
+                            <div class="sb-sidenav-menu-heading">Settings</div>
+
+
+                            @if (value.Contains("viewsupermarket"))
+                            {
+                                <a class=" nav-link" href="/Supermarket/Allsupermarkets">
+                                    <div class=" sb-nav-link-icon"> <i class="fa-solid fa-cart-shopping"></i></div>
+                                    Super Markets
+                                </a>
+                            }
 
 
 
-                        @if (value.Contains("viewcategory"))
-                        {
-                            <a class="nav-link" href="/Category/AllCategories">
-                                <div class="sb-nav-link-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
-                                Categories
-                            </a>
-                        }
-                        @if (value.Contains("viewsp"))
-                        {
-                            <a class="nav-link" href="/Supermarketproducts/Allsupermarkets">
-                                <div class="sb-nav-link-icon"><i class="fa-solid fa-money-bill-trend-up"></i> </div>
-                                Super Market Products
-                            </a>
-                        }
-                        @if (value.Contains("viewroles"))
-                        {
-                            <a class="nav-link" href="/Roles/AllRoles">
-                                <div class="sb-nav-link-icon"><i class="fa-sharp fa-solid fa-lock"></i></div>
-                                Roles
-                            </a>
-                        }
+                            @if (value.Contains("viewproduct"))
+                            {
+
+                                <a class=" nav-link" href="/Products/AllProducts">
+                                    <div class=" sb-nav-link-icon"><i class="fa-brands fa-product-hunt"></i></div>
+                                    Products
+                                </a>
+
+                            }
 
 
-                        @if (value.Contains("viewpermissions"))
-                        {
-                            <a class="nav-link" href="/Permission/Allpermissions">
-                                <div class="sb-nav-link-icon"><i class="fa-sharp fa-solid fa-door-open"></i></div>
-                                Permissions
-                            </a>
-                        }
-                        @if (value.Contains("viewusers"))
-                        {
-                            <a class="nav-link" href="/Others/Allusers">
-                                <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
-                                Users
-                            </a>
-                        }
+
+                            @if (value.Contains("viewcategory"))
+                            {
+                                <a class=" nav-link" href="/Category/AllCategories">
+                                    <div class=" sb-nav-link-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
+                                    Categories
+                                </a>
+                            }
+                            @if (value.Contains("viewsp"))
+                            {
+                                <a class=" nav-link" href="/Supermarketproducts/Allsupermarkets">
+                                    <div class=" sb-nav-link-icon"><i class="fa-solid fa-money-bill-trend-up"></i> </div>
+                                    Super Market Products
+                                </a>
+                            }
+                            @if (value.Contains("viewroles"))
+                            {
+                                <a class=" nav-link" href="/Roles/AllRoles">
+                                    <div class=" sb-nav-link-icon"><i class="fa-sharp fa-solid fa-lock"></i></div>
+                                    Roles
+                                </a>
+                            }
+
+
+                            @if (value.Contains("viewpermissions"))
+                            {
+                                <a class=" nav-link" href="/Permission/Allpermissions">
+                                    <div class=" sb-nav-link-icon"><i class="fa-sharp fa-solid fa-door-open"></i></div>
+                                    Permissions
+                                </a>
+                            }
+                            @if (value.Contains("viewusers"))
+                            {
+                                <a class=" nav-link" href="/Others/Allusers">
+                                    <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
+                                    Users
+                                </a>
+                            }
 
 
                         </div>
@@ -141,23 +162,136 @@
 
 
 
-                </div>
+                    </div>
 
 
-                <div class="sb-sidenav-footer">
-                    <div class="small">Logged in as:</div>
-                    @User.Identity.Name.Split(',').First()
-                </div>
-
-
-
+                    <div class=" sb-sidenav-footer">
+                        <div class=" small">Logged in as:</div>
+                        @User.Identity.Name.Split(',').First()
+                    </div>
 
 
 
 
 
 
-            </nav>
+
+
+
+                </nav>
+            </div>
+        </div>
+
+        <div class="Arabic">
+
+
+            <div id="layoutSidenav_nav">
+                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                    <div class="sb-sidenav-menu">
+
+
+
+
+                        <div class="nav">
+
+
+
+                            <div class="sb-sidenav-menu-heading">اساسي</div>
+
+                            <a class=" nav-link" href="/Users/Dashboard">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                الصفحه الرئيسيه
+                            </a>
+
+
+
+                            <div class="sb-sidenav-menu-heading">الاعدادات</div>
+
+
+                            @if (value.Contains("viewsupermarket"))
+                            {
+                                <a class=" nav-link" href="/Supermarket/Allsupermarkets">
+                                    <div class=" sb-nav-link-icon"> <i class="fa-solid fa-cart-shopping"></i></div>
+                                   المتجر
+                                </a>
+                            }
+
+
+
+                            @if (value.Contains("viewproduct"))
+                            {
+
+                                <a class=" nav-link" href="/Products/AllProducts">
+                                    <div class=" sb-nav-link-icon"><i class="fa-brands fa-product-hunt"></i></div>
+                                    البضائع
+                                </a>
+
+                            }
+
+
+
+                            @if (value.Contains("viewcategory"))
+                            {
+                                <a class=" nav-link" href="/Category/AllCategories">
+                                    <div class=" sb-nav-link-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
+                                    الاصناف
+                                </a>
+                            }
+                            @if (value.Contains("viewsp"))
+                            {
+                                <a class=" nav-link" href="/Supermarketproducts/Allsupermarkets">
+                                    <div class=" sb-nav-link-icon"><i class="fa-solid fa-money-bill-trend-up"></i> </div>
+                                    بضائع المتاجر
+                                </a>
+                            }
+                            @if (value.Contains("viewroles"))
+                            {
+                                <a class=" nav-link" href="/Roles/AllRoles">
+                                    <div class=" sb-nav-link-icon"><i class="fa-sharp fa-solid fa-lock"></i></div>
+                                    الادوار
+                                </a>
+                            }
+
+
+                            @if (value.Contains("viewpermissions"))
+                            {
+                                <a class=" nav-link" href="/Permission/Allpermissions">
+                                    <div class=" sb-nav-link-icon"><i class="fa-sharp fa-solid fa-door-open"></i></div>
+                                    الاذونات
+                                </a>
+                            }
+                            @if (value.Contains("viewusers"))
+                            {
+                                <a class=" nav-link" href="/Others/Allusers">
+                                    <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
+                                    المستخدمين
+                                </a>
+                            }
+
+
+                        </div>
+
+
+
+
+                    </div>
+
+
+                    <div class=" sb-sidenav-footer">
+                        <div class=" small">:تم تسجيل الدخول من </div>
+                        @User.Identity.Name.Split(',').First()
+                    </div>
+
+
+
+
+
+
+
+
+
+                </nav>
+            </div>
         </div>
         <div id="layoutSidenav_content">
 
@@ -179,6 +313,9 @@
 
 
 
+
+
+
     <script src="~/Scripts/userlayoutbootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="~/Scripts//usersdatatables.js"></script>
     <script src="~/Scripts/simple-datatables@latest.js" crossorigin="anonymous"></script>
@@ -188,6 +325,52 @@
     <script src="~/Scripts/users.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
+
+
+
+    <script>
+
+        localStorage.setItem("lang", "Arabic");
+       
+        let lang = localStorage.getItem("lang");
+
+        console.log(lang);
+
+
+        if (lang == "Arabic") {
+
+            let Arabicelements = document.getElementsByClassName("Arabic");
+
+            for (const Arabicelement of Arabicelements) {
+                Arabicelement.style.display = "block";
+            }
+            let EnglishElements = document.getElementsByClassName("English");
+
+            for (const Englishitem of EnglishElements) {
+                Englishitem.style.display = "none";
+
+            }
+        }
+
+        if (lang == "English") {
+
+            let EnglishElements = document.getElementsByClassName("English");
+
+            for (const Englishitem of EnglishElements) {
+                Englishitem.style.display = "block";
+            }
+
+            let Arabicelements = document.getElementsByClassName("Arabic");
+
+            for (const Arabicelement of Arabicelements) {
+                Arabicelement.style.display = "none";
+            }
+
+        }
+
+    </script>
+
+
 </body>
 
 </html>
