--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarketproducts/Allsupermarkets.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarketproducts/Allsupermarkets.cshtml
@@ -13,7 +13,7 @@
 
 
 }
-<main>
+<main class="English">
     <div class="container-fluid px-4">
         <h1 class="mt-4">Super Markets</h1>
         <ol class="breadcrumb mb-4">
@@ -42,7 +42,7 @@
                                 <th></th>
                             }
 
-                            </tr>
+                        </tr>
                     </thead>
                     <tfoot>
                         <tr>
@@ -77,7 +77,84 @@
                                     </td>
                                 }
 
-                                </tr>
+                            </tr>
+                        }
+
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</main>
+
+
+
+<main class="Arabic">
+    <div class="container-fluid px-4">
+        <h1 class="mt-4">المتاجر</h1>
+        <ol class="breadcrumb mb-4">
+            <li class="breadcrumb-item"><a href="/Users/Dashboard">الصفحه الرئيسيه</a></li>
+            <li class="breadcrumb-item active">المتاجر</li>
+        </ol>
+        <div style="margin-bottom:10px">
+
+            <span></span>
+        </div>
+        <div class="card mb-4">
+            <div class="card-header">
+                <i class="fas fa-table me-1"></i>
+                All SuperMarkets
+            </div>
+            <div class="card-body">
+                <table id="datatablesSimplea">
+                    <thead>
+                        <tr>
+                            <th>اسم المتجر</th>
+                            <th>المنطقه</th>
+                            <th>الوصف</th>
+                            <th>رقم الهاتف</th>
+                            @if (value.Contains("viewspp"))
+                            {
+                                <th></th>
+                            }
+
+                        </tr>
+                    </thead>
+                    <tfoot>
+                        <tr>
+                            <th>اسم المتجر</th>
+                            <th>المنطقه</th>
+                            <th>الوصف</th>
+                            <th>رقم الهاتف</th>
+                            @if (value.Contains("viewspp"))
+                            {
+                                <th></th>
+                            }
+
+
+                        </tr>
+                    </tfoot>
+                    <tbody>
+                        @foreach (var market in Model)
+                        {
+
+                            <tr>
+                                <td>@market.SupermarketName</td>
+                                <td>@market.SupermarketRegion</td>
+                                <td>@market.SupermarketDescription</td>
+                                <td>@market.Phonenumber</td>
+
+                                @if (value.Contains("viewspp"))
+                                {
+                                    <td>
+
+                                        <a href="/Supermarketproducts/Supermarketproducts/@market.SupermarketId" class="btn btn-success" role="button">البضائع</a>
+
+                                    </td>
+                                }
+
+                            </tr>
                         }
 
 
