--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarketproducts/Createproduct.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarketproducts/Createproduct.cshtml
@@ -1,11 +1,11 @@
-﻿@model   MarketPricingSystem.ViewModel.marketandproducts
+﻿@model  MarketPricingSystem.ViewModel.marketandproducts
 @{
     ViewBag.Title = "Createsupermarket";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 }
 
 
-<main>
+<main class="English">
 
     <div class="container">
         <div class="row justify-content-center">
@@ -17,15 +17,15 @@
 
                         <form method="post" action="/Supermarketproducts/Confirmcreate">
 
-                            <input type="hidden"  value="@Model.marketid" name="marketid"/>
-
+                            <input type="hidden" value="@Model.marketid" name="marketid" />
+                            <h6 style="color:red;opacity:0.5;">@TempData["Message3"]  </h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="products">products</label>
 
-                                        <select id="products" class="form-control" name="productid">
-
+                                        <select id="products" class="form-control" name="productid" required>
+                                            <option selected disabled>--select--</option>
                                             @foreach (var product in Model.allproducts)
                                             {
                                                 <option value="@product.ProductId">@product.ProductName - @product.BarcodeNb </option>
@@ -60,6 +60,77 @@
 
                             <div class="mt-4 mb-0">
                                 <div class="d-grid"> <button type="submit" class="btn btn-primary"> Add</button> </div>
+                            </div>
+                        </form>
+
+
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+
+
+<main class="Arabic">
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-7">
+                <div class="card shadow-lg border-0 rounded-lg mt-5">
+                    <div class="card-header"><h3 class="text-center font-weight-light my-4">اضافه منتج جديد</h3></div>
+                    <div class="card-body">
+
+
+                        <form method="post" action="/Supermarketproducts/Confirmcreate">
+
+                            <input type="hidden" value="@Model.marketid" name="marketid" />
+                            <h6 style="color:red;opacity:0.5;">@TempData["Message3"]  </h6>
+                            <div class="row mb-3">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="products">المنتج</label>
+
+                                        <select id="products" class="form-control" name="productid" required>
+                                            <option selected disabled>--تحديد--</option>
+
+                                            @foreach (var product in Model.allproducts)
+                                            {
+                                                <option value="@product.ProductId">@product.ProductName - @product.BarcodeNb </option>
+                                            }
+
+
+
+
+                                        </select>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+
+                            <div class="row mb-3">
+                                <div class="col-md-6">
+                                    <div class="form-floating mb-3 mb-md-0">
+                                        <input class="form-control" id="price" type="text" name="price" required />
+                                        <label for="price">سعر المنتج</label>
+                                    </div>
+                                </div>
+
+                            </div>
+
+
+
+
+
+
+                            <div class="mt-4 mb-0">
+                                <div class="d-grid"> <button type="submit" class="btn btn-primary"> اضافه</button> </div>
                             </div>
                         </form>
 
